ecommerce-product-page-main/style.css
@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap');

/* CSS RESET */

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* GENERAL STYLES */

:root {
    --orange: hsl(26, 100%, 55%);
    --pale-orange: hsl(25, 100%, 94%);
    --very-dark-blue: hsl(220, 13%, 13%);
    --dark-grayish-blue: hsl(219, 9%, 45%);
    --grayish-blue: hsl(220, 14%, 75%);
    --light-grayish-blue: hsl(223, 64%, 98%);
    --white: hsl(0, 0%, 100%);
    --black: hsl(0, 0%, 0%);

    --overlay-bg-color: hsla(0, 0%, 0%, 0.75);


    /* FONT */
    --small-font-size: 0.8rem;
    --normal-font-size: 1rem;
    --large-font-size: 1.25rem;
    --xlarge-font-size: 1.5rem;


    --header-height: 4rem;
    --header-padding-inline: 1rem;

    --logo-nav-gap: 0.75rem;
    --cart-btn-profile-pic-gap: 0.75rem;

    --profile-pic-width: 1.5rem;


    --cart-dialog-width: clamp(18.75rem, 95%, 21.375rem);
    --cart-dialog-border-radius: 0.5rem;

    --cart-item-image-border-radius: 0.2rem;

    --cart-btns-border-radius: 0.5rem;

    --main-image-height: 20rem;

    --product-decription-padding: 1rem;

    --box-shadow: 0 0.75rem 1rem hsla(0, 0%, 0%, 0.2);

    
}

body {
    font: 1rem "Kumbh Sans", sans-serif;

    width: 100vw;
    min-height: 100vh;
}

ul {
    list-style: none;
}

button {
    font: 1rem "Kumbh Sans", sans-serif;
}

h1 {
    font-size: var(--xlarge-font-size);
}

/* TEXT PRESETS */

.text-preset-1 { /* Nav bar items, `Cart`, `Add To Cart`, `Checkout`, item price in cart */
    font-size: var(--normal-font-size); 
    font-weight: 700;
    color: var(--black);
    text-decoration: none;
}

.text-preset-2 { /* Product Description, nav bar items for desktop, cart items*/
    font-size: var(--small-font-size);
    font-weight: 400;
    color: var(--dark-grayish-blue);
}

.text-preset-3 { /* Company name, Previous price, `Your cart is empty`, */
    font-size: var(--small-font-size);
    font-weight: 700; 
    color: var(--dark-grayish-blue);
} 

.company-name {
    letter-spacing: 0.1rem;
}

.text-preset-4 { /* Price, Product name*/
    font-size: var(--large-font-size);
    font-weight: 700;
    color: var(--black);   
}
 

/* ELEMENTS */
.overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;

    background-color: var(--overlay-bg-color);

    z-index: 98;
}

header {
    display: flex;
    justify-content: space-between;
    align-items: center;

    height: var(--header-height);
    padding-inline: var(--header-padding-inline);
}


.menu-btn {
    background-color: transparent;
    border: none;
    position: relative;
    z-index: 100;

    margin-right: var(--logo-nav-gap);
}

.header-menu-nav {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 99;
    background-color: var(--white);

    width: min(70%, 14.75rem);
    height: 100%;

    padding-top: calc(1rem + var(--header-height));
    padding-left: var(--header-padding-inline);
}

.header-menu-nav ul {
    display: grid;
    gap: 1rem;
}

.header-nav-options {
    position: relative;
}

.header-nav-options:hover::after {
    position: absolute;
    content: "";
    bottom: 0;
    left: 0;
    width: 100%;
    border-bottom: 2px solid var(--orange);
}

.header-profile-cart {
    display: flex;
    align-items: center;
    gap: var(--cart-btn-profile-pic-gap);
}

.profile-picture {
    width: var(--profile-pic-width);
    height: auto;
}

.profile-picture:hover {
    border-radius: 50%;
    outline: 2px solid var(--orange);
}

.show-cart-btn {
    background-color: transparent;
    border: none;

    position: relative;
}

.show-cart-btn span {
    position: absolute;
    top: -8px;
    right: -5px;
    background-color: var(--orange);

    font-size: var(--small-font-size);
    color: var(--white);

    padding-inline: 0.4rem;
    border-radius: 0.5rem;
}

.cart-dialog {
    z-index: 2;
    width: var(--cart-dialog-width);
    margin-top: 2rem;
    margin-inline: auto;

    border: none;
    border-radius: var(--cart-dialog-border-radius);
    box-shadow: var(--box-shadow);
}

.cart-dialog header {
    padding: 1rem;
}

.cart-dialog hr {
    border: 1px solid var(--light-grayish-blue);

}


.cart-dialog > article {
    min-height: 8rem;
    padding: 1rem;
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
    gap: 1rem;

}

.cart-items-container {
    width: 100%;
    flex-grow: 1;
    display: flex;
    flex-flow: column nowrap;
    justify-content: center;
    align-items: center;
    gap: 1rem;
}

.cart-popup-item {
    width: 100%;
    display: grid;
    grid-template-columns: auto auto 1fr;
    align-items: center;
    justify-content: start;
    gap: 0.75rem;
}

.cart-popup-item > img {
    width: auto;
    height: 3rem;
    border-radius: var(--cart-item-image-border-radius);
}

.cart-item-info {
    height: 2.5rem;
    display: flex;
    flex-flow: column nowrap;
    justify-content: space-between;
}

.cart-item-info strong {
    color: var(--black);
}

.cart-popup-item button {
    justify-self: end;
    background-color: transparent;
    border: none;
}

.cart-btns { 
    width: 100%;
    padding-block: 1rem;
    background-color: var(--orange);
    border: none;
    border-radius: var(--cart-btns-border-radius);
}

.cart-btns:hover {
    background-color: rgba(255, 125, 26, 0.5);
}


.image-thumbnail-nav {
    display: none;
}

.main-image-container {
    height: var(--main-image-height);
    overflow: hidden;

    position: relative;
    z-index: 0;
}

.show-lightbox-btn {
    background-color: transparent;
    border: none;
}

.show-lightbox-btn > img { 
    width: 100%;
    height: auto;
} 


.change-image-arrow-btns {
    position: absolute;

    width: 1rem;
    height: 1rem;
    padding: 1rem;

    background-color: var(--white);
    border: none;
    border-radius: 50%;

    top: 50%;
    transform: translateY(-50%);

    display: grid;
    place-content: center;
}

.change-image-arrow-btns img {
    width: 0.5rem;
    height: auto;
}

button.change-image-arrow-btns:nth-of-type(2) {
    left: 1rem;
}

button.change-image-arrow-btns:last-of-type {
    right: 1rem;
}


.product-descr-container, .add-to-cart-container {
    padding: var(--product-decription-padding);
}

.product-descr-container {
    display: flex;
    flex-flow: column nowrap;
    gap: 1rem;
}

.current-price {
    display: flex;
    gap: 1rem;
    align-items: center;
}

.percent-off {
    font-weight: 700;
    font-size: var(--small-font-size);
    color: var(--white);

    background-color: var(--black);

    padding-inline: 0.4rem;
    padding-block: 0.2rem;
    border-radius: 0.3rem;
}

.product-pricing { 
    display: flex;
    justify-content: space-between;
}

.add-to-cart-container {
    display: grid;
    gap: 1rem;
}

.item-count-container {
    display: flex;
    justify-content: space-between;
    align-items: center;

    background-color: var(--light-grayish-blue);
    padding: 1rem;
    border-radius: 0.5rem;
}

.change-item-count-btns {
    display: grid;
    place-content: center;

    background-color: transparent;
    border: none;
}

.change-item-count-btns:hover {
    filter: brightness(1.5)
}

.add-to-cart-container > button {
    display: flex;
    gap: 1rem;
    justify-content: center;
    align-items: center;

    box-shadow: 0 0.5rem 1rem hsla(26, 100%, 55%, 0.3);
}

.add-to-cart-container > button > img {
    filter: brightness(0);
}

.lightbox-dialog {
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);

    width: 50rem;
    height: 40rem;

    background-color: transparent;
    border: none;
}

.hidden {
    display: none;
}

@media (min-width: 48em) {

    :root {
        --main-image-height: 25rem;

        --cart-btn-profile-pic-gap: 2rem;
        --profile-pic-width: 2.5rem;
    }


    .main-image-container{
        width: var(--main-image-height);
        height: var(--main-image-height);
        margin-inline: auto;
    }

    .close-lightbox-btn {
        background-color: transparent;
        border: none;
        margin-left: 1rem;

    }

    .main-image {
        width: 100%;
        height: auto;
        border-radius: 1rem;
    }

    .image-thumbnail-nav {
        margin-top: 1rem;
        display: flex;
        justify-content: center;
        align-items: center;
        gap: 1rem;
    }

    .thumbnail-btn {
        background-color: transparent;
        border: none;
        width: 6rem;
        height: 6rem;
        border-radius: 1rem;
        overflow: hidden;

        position: relative;
    }

    .thumbnail-btn img {
        width: 100%;
        height: auto;
    }

    .thumbnail-btn.selected {
        border: 2px solid var(--orange);
    }

    :is(.thumbnail-btn:hover, .thumbnail-btn.selected)::before {
        content: "";
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        background-color: hsla(0, 100%, 100%, 0.5);
    }
   

    .product-descr-container, .add-to-cart-container {
        width: 50%;
        margin-inline: auto;
    }
} 

@media (min-width: 64em) {
    .menu-btn {
        display: none;
    }

    body > header {
        max-width: 70rem;
        margin-inline: auto;
        margin-bottom: 5rem;
        border-bottom: 1px solid var(--light-grayish-blue);
    }

    .header-profile-cart > div {
        position: relative;
    }

    .cart-dialog {
        left: 50%;
        transform: translate(-80%);
    }


    .header-menu-container {
        display: flex;
        align-items: center;
        gap: 1rem;
    }

    .header-menu-nav {
        position: static;
        background-color: transparent;
        width: auto;
        height: auto;
        padding-top:0;
    }
    
    .header-menu-nav ul {
        display: flex;
        flex-flow: row nowrap;
    }

    .header-nav-options {
        font-weight: 400;
    }

    .header-nav-options:hover::after {
        bottom: -0.5rem;
    }
}

@media (min-width: 90em) {
    :root {
        /* FONT */
        --small-font-size: 1rem;
        --normal-font-size: 1.2rem;
        --large-font-size: 1.25rem;
        --xlarge-font-size: 2rem;

        --cart-dialog-width: 24rem;

    }

    main {
        display: flex;
        justify-content: center;
        align-items: center;
        width: 70%;
        margin-inline: auto;
    }

    .header-profile-cart > div {
        position: relative;
    }

    .cart-dialog {
        left: 50%;
        transform: translate(-50%);
    }

    .product-descr-container, .add-to-cart-container {
        width: 80%;
    }
    
}

